--- a/ApplicationDev/ApplicationDev.csproj
+++ b/ApplicationDev/ApplicationDev.csproj
@@ -54,6 +54,12 @@
     <Compile Include="DailyReport.Designer.cs">
       <DependentUpon>DailyReport.cs</DependentUpon>
     </Compile>
+    <Compile Include="Search.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Search.Designer.cs">
+      <DependentUpon>Search.cs</DependentUpon>
+    </Compile>
     <Compile Include="Visitor.cs" />
     <Compile Include="Dashboard.cs">
       <SubType>Form</SubType>
@@ -112,6 +118,9 @@
     </Compile>
     <EmbeddedResource Include="Register.resx">
       <DependentUpon>Register.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Search.resx">
+      <DependentUpon>Search.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="WeeklyReport.resx">
       <DependentUpon>WeeklyReport.cs</DependentUpon>
